k8s/pihole/05_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dhcp
  labels:
    app: pihole
    chart: pihole-2.26.1
    release: pihole
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
    - port: 67
      targetPort: client-udp
      protocol: UDP
      name: client-udp
  selector:
    app: pihole
    release: pihole
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp
  labels:
    app: pihole
    chart: pihole-2.26.1
    release: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-svc
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.25
  externalTrafficPolicy: Local
  ports:
    - port: 53
      targetPort: dns
      protocol: TCP
      name: dns
  selector:
    app: pihole
    release: pihole
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  labels:
    app: pihole
    chart: pihole-2.26.1
    release: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-svc
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.25
  externalTrafficPolicy: Local
  ports:
    - port: 53
      targetPort: dns-udp
      protocol: UDP
      name: dns-udp
  selector:
    app: pihole
    release: pihole
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  labels:
    app: pihole
    chart: pihole-2.26.1
    release: pihole
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app: pihole
    release: pihole
