k8s/pihole/08_ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-ingress-route
  namespace: pihole
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.keindev.ru`)
      kind: Rule
      services:
        - name: pihole-web
          namespace: pihole
          port: 80
      middlewares:
        - name: pihole-headers
          namespace: pihole
